--- a/secscan.man
+++ b/secscan.man
@@ -41,14 +41,16 @@ The
 .B -a
 option allows a file to be removed from the list of files associated with the
 prescence of a particular root kit.
-.TP 5
-This option arises from use on a
+.LP 5
+This option arises from the use of
+.B secscan
+on a
 .B Slackware
 host where the quite legitimate presence of 
 .I "/etc/ssh/sshd_config"
 generates a warning regarding a possible infection of Dica-Kit from 
 .BR rkhunter .
-.br
+.LP
 The use of 
 .B -a Dica-Kit:/etc/ssh/sshd_config
 will create an amended temporary version of
